fixtures/cs-rng-01/bad/math-random-class-field.ts
export class TokenIssuer {
	sessionId = Math.random().toString(36);

	issue() {
		return this.sessionId;
	}
}
